[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/graphics/Personage/percostas_0.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/tile_presente.tres" type="TileSet" id=2]
[ext_resource path="res://assets/graphics/SALAPRINCIPAL/PRESENTE_N_PORTA.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/SALAPRINCIPAL/PRESENTE_VIAGEM.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/Viagem no tempo/salaprincipalfu.png" type="Texture" id=5]
[ext_resource path="res://cenas/base/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://cenas/fases/DEBUG/__TILE.gd" type="Script" id=7]
[ext_resource path="res://cenas/base/butao.tscn" type="PackedScene" id=8]
[ext_resource path="res://cenas/fases/fase_8/fase8.gd" type="Script" id=9]
[ext_resource path="res://assets/graphics/tile_viagem.tres" type="TileSet" id=10]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
rough = true
absorbent = true

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "pa",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "pre",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fu",
"speed": 5.0
} ]

[node name="fase8" type="Node2D" groups=[
"__sala",
]]
script = ExtResource( 9 )

[node name="player_area" parent="." instance=ExtResource( 6 )]
position = Vector2( 512.078, 512 )
physics_material_override = SubResource( 1 )
viajable = false
cooldown_enable = false

[node name="bg" type="AnimatedSprite" parent="."]
position = Vector2( 514.375, 302.133 )
scale = Vector2( 0.397409, 0.407823 )
z_index = -5
frames = SubResource( 2 )
animation = "pre"

[node name="ReferenceRect" type="ReferenceRect" parent="." groups=[
"__col",
]]
margin_left = 112.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="__TILE" type="TileMap" parent="."]
scale = Vector2( 0.75, 0.75 )
z_index = -1
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( 196615, -1073741822, 0, 196616, 3, 0, 196617, 2, 0, 262151, -1610612733, 0, 262153, -1610612733, 0, 327687, 536870913, 0, 327689, 536870913, 0 )
script = ExtResource( 7 )

[node name="__TILE2" type="TileMap" parent="."]
visible = false
scale = Vector2( 0.75, 0.75 )
z_index = -1
tile_set = ExtResource( 10 )
cell_size = Vector2( 80, 80 )
collision_use_parent = true
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 196615, -1073741822, 0, 196616, 3, 0, 196617, 2, 0, 262151, -1610612733, 0, 262153, -1610612733, 0, 327687, 1610612738, 0, 327688, 1610612739, 0, 327689, -1610612734, 0 )
script = ExtResource( 7 )
dispo_pa = true
dispo_pre = false

[node name="botao_area" parent="." instance=ExtResource( 8 )]
position = Vector2( 512.078, 232 )
z_index = -1
max_click = 1

[node name="player_clone" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 284 )
scale = Vector2( 0.375, 0.375 )
z_index = -1
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 512.078, 512 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 600, 1024, 600, 1024, 0 )

[connection signal="click" from="botao_area" to="." method="_on_botao_area_click"]
